# MyMusicAnalyzer

./: .gitignore  Makefile  README.md  netlify.toml  pyproject.toml
backend/: Makefile  pyproject.toml
backend/notebooks/: exploration.ipynb  exploration2.ipynb
backend/src/: api.py
backend/src/routers/: artists.py  auth.py  genres.py  patterns.py  tracks.py  trends.py  user.py
backend/src/tests/: fixtures.py  test_artists.py
backend/src/utils/: spotify_handler.py  utils.py
frontend/: .config.dev  .pre-commit-config.yaml  Makefile  README.md  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest-utils.ts
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/: AuthProvider.tsx  Button.tsx  Card.tsx  DownloadSummaryModal.tsx  Header.tsx  Item.tsx  Login.tsx  MainContent.tsx  PopularityInsights.tsx  Sidebar.tsx  SpotifyCallback.tsx  TopCard.tsx  TopDecadesInsights.tsx  TopItems.tsx
frontend/src/components/App/: App.test.tsx  App.tsx
frontend/src/components/Header/: Header.test.tsx
frontend/src/components/TopArtists/: TopArtists.test.tsx
frontend/src/state/: artistsSlice.ts  artistsSlice.tsx  decadesSlice.ts  genresSlice.ts  popularitySlice.ts  store.ts  tracksSlice.ts  userSessionSlice.ts  utils.ts  viewsSlice.ts
