[tool.poetry]
name = "mymusicanalyzer"
version = "0.1.0"
description = "API for the MyMusicAnalyzer app"
authors = ["sophielouisea"]
readme = "README.md"
packages = [
  {include = "routers", from="./backend/src/"},
  {include = "utils", from="./backend/src/"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
SQLAlchemy = "^2.0.36"
numpy = "^2.1.3"
requests = "^2.32.3"
spotipy = "^2.24.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
